<resources>
    <string name="app_name">USSD Codes</string>
    <string name="version_num" translatable="false">1.3.3</string>
    <string name="nav_header_title" translatable="false">USSD Codes for African countries</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="country_str">Countries</string>
    <string name="bn_str">Benin</string>
    <string name="cm_str">Cameroun</string>
    <string name="ci_str">Ivory Coast</string>
    <string name="gh_str">Ghana</string>
    <string name="ma_str">Mali</string>
    <string name="ni_str">Niger</string>
    <string name="ng_str">Nigeria</string>
    <string name="sn_str">Senegal</string>
    <string name="tg_str">Togo</string>
    <string name="settings_str">Parameters</string>
    <string name="about_str">About</string>
    <string name="share_str">Share</string>
    <string name="options_str">Options</string>
    <string name="others_str">Other codes</string>
    <string name="favorites_str">Favorites</string>
    <string name="share_app_title">Share the app</string>
    <string name="share_app_msg">No more need to remember all these USSD complicated codes, perform your operations in one click only through the application %1$s</string>
    <string name="legal_notice_str">Legal Notice</string>
    <string name="privacy_police_str">Privacy police</string>
    <string name="contact_str">Contact</string>
    <string name="credits_str">Credits</string>
    <string name="credits_details_str">\tDeveloper : Neteru Studio\n</string>
    <string name="send_us_your_codes">You can send us the codes of your country that you would like to see included in the next updates and make corrections if necessary, Thanks!</string>
    <string name="version_str">Version</string>
    <string name="MOOV">MOOV</string>
    <string name="TOGOCEL">TOGOCEL</string>
    <string name="Orange">Orange</string>
    <string name="ETISALAT">ETISALAT</string>
    <string name="GLO">GLO</string>
    <string name="MTN">MTN</string>
    <string name="Airtel">Airtel</string>
    <string name="search_str">Search</string>
    <string name="add_str">Add USSD code</string>
    <string name="auth_denied">Permission denied</string>
    <string name="add_ussd">Add USSD code</string>
    <string name="title">Title</string>
    <string name="ussd_code">USSD Code </string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error!</string>
    <string name="code_added">Code added!</string>
    <string name="incomplete_informations">Incomplete Informations!</string>
    <string name="ussd_settings_title">Settings - %1$s</string>
    <string name="launch">Launch</string>
    <string name="confirmation_title">Confirmation - %1$s</string>
    <string name="missing_parameters">Missing parameters!</string>
    <string name="execute">Execute</string>
    <string name="copied_code">Code is copied!</string>
    <string name="other_code_warning">Sorry, this number cannot call out directly. We have copyed this number into your clipboard, please just paste it in your call screen page, Thanks!</string>
    <string name="removed_from_favorites">Code removed from favorites!</string>
    <string name="added_to_favorites">Code added to favorites!</string>
    <string name="delete_this_code">Delete this code ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="code_deleted">Code is deleted!</string>
    <string name="suppression">Suppression</string>
    <string name="your_country">Your country</string>
    <string name="your_country_summary">Select a default country</string>
    <string name="your_message">Your Message:\n</string>
    <string name="thanks_for_feedback">Thank you for the feedback!</string>
    <string name="no_favorites">No favorites!</string>
    <string name="evaluate_str">Rate us</string>
    <string name="loading_in_progress">Loading…</string>
    <string name="updating">Updating…</string>
    <string name="initialization">Initialization…</string>
    <string name="email_address" translatable="false">neterustudio@gmail.com</string>
    <string name="contact_us_pref_title">Contact us</string>
    <string name="app_version_title">App version</string>
    <string name="app_settings">Application settings</string>
</resources>
